--- a/www/pages/recorridoVIC3.html
+++ b/www/pages/recorridoVIC3.html
@@ -41,7 +41,7 @@
                         </a>
                     </div>
                     <div class="buttons-container" style="display: flex;margin-top: 5%;">
-                        <a onclick="generarAuditoriaVIC();" class="fwm-button-recorrido">
+                        <a  href="/tipoAud/" class="fwm-button-recorrido">
                             <img src="img/iconsMenu/encuesta.svg" width="90px" height="90px" id="img7"/>
                             <span class="fwm-text-recorrido">Auditoría</span>
                         </a>
