--- a/www/pages/recorridoVIC3.html
+++ b/www/pages/recorridoVIC3.html
@@ -41,7 +41,7 @@
                         </a>
                     </div>
                     <div class="buttons-container" style="display: flex;margin-top: 5%;">
-                        <a  href="/tipoAud/" class="fwm-button-recorrido">
+                        <a   onclick="validarAud();"class="fwm-button-recorrido">
                             <img src="img/iconsMenu/encuesta.svg" width="90px" height="90px" id="img7"/>
                             <span class="fwm-text-recorrido">Auditoría</span>
                         </a>
@@ -225,29 +225,68 @@
                         function(){}
                 );
 
-            databaseHandler.db.transaction(
-            function (tx) {
-                tx.executeSql(
-                    "Select * from VIC_Respuesta where id_cedula = ?",
-                    [id_cedula],
-                    function (tx, results) {
-                        let length = results.rows.length; 
-                        var obl = '';
-                        if (length==0){
-                            
-                        }else{
-                            document.getElementById("img7").src="img/iconsMenu/encuesta2.svg";
+        databaseHandler.db.transaction(
+            function(tx){
+                tx.executeSql("Select * from datosVIC where id_cedula = ?",
+                [id_cedula],
+                    function(tx, results){
+                        var item = results.rows.item(0);
+                        var emp = item.tipo_empresa; 
+                        if(emp){
+                            var Nom = 'Preguntas-VIC-1';
+                            app.request.get(cordova.file.dataDirectory + "jsons/"+Nom+".json", function (data) {
+                                var content2 = JSON.parse(data);    
+                                var VIC ;
+                                if(emp == 1){
+                                    var VIC =content2[0];
+                                }else if(emp == 2){
+                                    var VIC =content2[1];
+                                }else if(emp == 3){
+                                    var VIC =content2[2];
+                                }
+
+                                var tamaVic = VIC.length;
+
+                                databaseHandler.db.transaction(
+                                    function (tx) {
+                                        tx.executeSql(
+                                            "Select * from VIC_Respuesta where id_cedula = ? and respuesta IS NOT NULL",
+                                            [id_cedula],
+                                            function (tx, results) {
+                                                let length = results.rows.length; 
+                                                var obl = '';
+                                                if (length==0){
+                                                    
+                                                }else if (length == tamaVic){
+                                                    document.getElementById("img7").src="img/iconsMenu/encuesta2.svg";
+                                                }
+                                            },
+                                            function (tx, error) {
+                                                console.log("Error al guardar registroPL: " + error.message);
+                                                app.preloader.hide();
+                                            }
+                                        );
+                                    },
+                                    function (error) { },
+                                    function () { }
+                                );
+
+                            });
+
+
+
                         }
                     },
-                    function (tx, error) {
-                        console.log("Error al guardar registroPL: " + error.message);
-                        app.preloader.hide();
+                    function(tx, error){
+                        console.log("Error al guardar: " + error.message);
                     }
                 );
             },
-            function (error) { },
-            function () { }
+            function(error){},
+            function(){}
         );
+
+
 
             }
         }
