--- a/www/pages/tipoAud.html
+++ b/www/pages/tipoAud.html
@@ -19,19 +19,22 @@
                         <div class="block-title" style="text-align: center; font-size: 20px;"><h2 style="color:#505759;font-size: 22px;font-family: 'ITC Avant Garde Gothic', sans-serif;">¿Que empresa se auditara?</h2></div>
                     </div>
                 </div>
-                    <div class="buttons-container" style="display: flex;margin-top: 5%; margin-left:30%;">
+                    <div class="buttons-container" style="display: flex;margin-top: 5%; margin-left: 22%; width: 400px;">
                         <a onclick="generarAuditoriaVIC(1);" class="fwm-button-recorrido">
+                            <img src="img/domino.png" width="90px" height="90px" id="img1"/>
                             <span class="fwm-text-recorrido">Dominos</span>
                         </a>
 
                     </div>
-                <div class="buttons-container" style="display: flex;margin-top: 5%; margin-left:30%;">
+                <div class="buttons-container" style="display: flex;margin-top: 5%; margin-left: 22%; width: 400px;">
                     <a onclick="generarAuditoriaVIC(2);" class="fwm-button-recorrido">
+                        <img src="img/vips.png" width="90px" height="90px" id="img1"/>
                         <span class="fwm-text-recorrido">Vips</span>
                     </a>
                 </div>
-                    <div class="buttons-container" style="display: flex;margin-top: 5%; margin-left:30%; ">
+                    <div class="buttons-container" style="display: flex;margin-top: 5%; margin-left: 22%; width: 400px; ">
                         <a onclick="generarAuditoriaVIC(3);" class="fwm-button-recorrido">
+                            <img src="img/italianis.png" width="140px" height="90px" id="img1"/>
                             <span class="fwm-text-recorrido">Italianis</span>
                         </a>
                     </div>
