--- a/platforms/android/app/src/main/assets/www/pages/recorrido1VIC.html
+++ b/platforms/android/app/src/main/assets/www/pages/recorrido1VIC.html
@@ -318,6 +318,10 @@
                                   }else if(resp == 1){
                                     $(SI).prop("checked", true);
                                   }
+                                  var recomendacion = item.recomendacion;
+                                  var RE = '#RE'+proceso;
+                                  $(RE).val(recomendacion);
+
                                 }
                               
       
